Correct css on paragraph spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,7 +25,7 @@
 		margin: 0;
 		padding: 0;
 		font-weight: 600;
-		color: #333333;
+		color: #{{ site.color.text.bold }};
 	}
 	
 	p, ol, ul
@@ -41,7 +41,7 @@
 	
 	p
 	{
-		line-height: 180%;
+		
 	}
 
   hr
@@ -52,6 +52,7 @@
 	strong
 	{
     font-weight: bold;
+	color: #{{ site.color.text.bold }};
 	}
 	
 	a
@@ -205,6 +206,11 @@
     padding-left: 25px;
     min-height: 120px;
     border-left: 1px solid rgba(0,0,0,.1); 
+  }
+
+  .news_text p
+  {
+	  
   }
 	
 	ul.style1 .date:after
@@ -437,6 +443,11 @@
 	{
 		padding-left: 0px;
 		padding-right: 250px;
+	}
+
+	.description p
+	{
+		line-height: 180%;
 	}
 		
 /*********************************************************************************/
